KTaivle_Bigprj_3/logs/archive/threshold_analysis.txt
  File "<string>", line 72
    print(f'{\
            ^
SyntaxError: '{' was never closed
